# stm32f40x-rs

./: Cargo.toml  LICENSE-MIT  README.md  gen-api.sh  rustfmt.toml
resources/: STM32F40x.svd
