[package]
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
name = "stm32f40x"
description = "Peripheral access API for STM32F40X microcontrollers"
documentation = "https://docs.rs/stm32f40x"
keywords = ["no-std", "arm", "cortex-m", "stm32"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yuri91/stm32f40x-rs"
version = "0.6.0"

[dependencies]
cortex-m = "0.4.0"
bare-metal = "0.1.0"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.3.5"

[features]
rt = ["cortex-m-rt"]

